--- a/BlazorMovie/Components/UIComponents/SearchComponents/MainSearchComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponents/MainSearchComponent.razor
@@ -36,6 +36,9 @@
 <ErrorMessageComponent Message="@errorMessage" />
 
 @code {
+    //NOTE: This component is the parent component for the SearchBoxInputComponent, 
+    // DropdownComponent and PersonSearchResultsComponent(modal).
+    //Code-behind/partial class utilized due to file size and complexity.
     #region PARAMETERS
     [Parameter]
     public string Placeholder { get; set; } = "Enter Search Term";
@@ -52,10 +55,9 @@
 
     [Parameter]
     public EventCallback<int> OnMoreDetailsRequested { get; set; }
-
-
     #endregion
 
+    #region PROPERTIES/VARIABLES
     private bool IsPersonModalOpen { get; set; } = false;
     private bool showSearchBox { get; set; } = false;
     private int page { get; set; } = 1;
@@ -72,20 +74,6 @@
     private SearchModel? Query { get; set; }
     private SearchModel searchModel { get; set; } = new SearchModel();
     public NavigationManager NavigationManager { get; set; } = null!;
-
-    #region CATEGORY CHANGED
-    private void OnCategoryChanged(ChangeEventArgs e)
-    {
-        var stringValue = e.Value?.ToString() ?? string.Empty;
-        searchModel.Category = Enum.TryParse<SearchCategory>(stringValue, out var parsedCategory) ? parsedCategory : SearchCategory.None;
-
-        showSearchBox = searchModel.Category == SearchCategory.MovieByTitle
-                     || searchModel.Category == SearchCategory.PersonByName;
-
-        if (!showSearchBox && searchModel.Category != SearchCategory.None) NavigateToCategory(searchModel.Category);
-       
-        StateHasChanged();
-    }
     #endregion
 
     #region PERFORM SEARCH
@@ -162,98 +150,11 @@
     }
     #endregion
 
-    #region HANDLE CATEGORY SELECTED
-    private void HandleCategorySelected(SearchCategory selectedCategory)
-    {
-        searchModel.Category = selectedCategory;
-        category = selectedCategory;
-        showSearchBox = selectedCategory == SearchCategory.MovieByTitle
-                      || selectedCategory == SearchCategory.PersonByName;
 
-        if (!showSearchBox && searchModel.Category != SearchCategory.None) NavigateToCategory(searchModel.Category);
-       
-        StateHasChanged(); // Update UI
-    }
-    #endregion
 
-    #region NAVIGATE TO CATEGORY PAGE
-    private void NavigateToCategory(SearchCategory category)
-    {
-        // Null or empty category check
-        if (category == SearchCategory.None)
-        {
-            Console.WriteLine("Invalid category provided for navigation.");
-            return; // Exit the method if category is null or empty
-        }
+    
 
-        // Map category to route
-        var route = category switch
-        {
-            SearchCategory.PopularMovies => "/",
-            SearchCategory.TopRated => " / top_rated",
-            SearchCategory.Upcoming => " / upcoming",
-            SearchCategory.NowPlaying => " / now_playing",
-            SearchCategory.SearchResults => " / search_result",
-            //fallback
-            _ => "/"
-        };
-
-        _navManager.NavigateTo(route);
-        
-    }
-    #endregion
-
-    #region VALIDATE SEARCH
-    private async Task<bool> ValidateSearchTerm()
-    {
-        if (string.IsNullOrWhiteSpace(searchQuery))
-        {
-            errorMessage = "Please enter a search term.";
-            StateHasChanged();
-            await Task.Delay(1500);
-            errorMessage = string.Empty;
-            StateHasChanged();
-            return false;
-        }
-        return true;
-    }
-    #endregion
-
-    #region CLEAR SEARCH
-    private void HandleClearSearch()
-    {
-        // Reset the searchQuery to an empty string
-        searchQuery = string.Empty;
-
-        // Hide the input group
-        showSearchBox = false;
-
-        // Reset the dropdown component to its default value
-        dropdownComponent?.ResetDropdown();
-
-        // Preserve the displayed search results
-        Console.WriteLine("Search cleared. Input and dropdown reset, but results remain displayed.");
-        StateHasChanged(); // Update UI
-    }
-    #endregion
-
-    #region CLOSE PERSON MODAL
-    private void ClosePersonModal()
-    {
-        // Called by PersonSearchResultsComponent button
-        IsPersonModalOpen = false;
-        SearchPersonResults = null;
-    }
-    #endregion
-
-    #region MODAL CLOSE VIA "MORE DETAILS" BUTTON
-    private void HandleMoreDetailsRequested(int personId)
-    {
-        // Called by PersonCardComponent button
-        ClosePersonModal();
-        _navManager.NavigateTo($"/person/{personId}");
-    }
-    #endregion
+    
 }
 
     
