Added `OnMoreDetailsRequested` parameter to `PersonCarouselComponent` for direct detail requests and implemented navigation logic. `PersonCardComponent` for detail requests.

--- a/BlazorMovie/Components/UIComponents/CreditComponents/PersonCardComponent.razor
+++ b/BlazorMovie/Components/UIComponents/CreditComponents/PersonCardComponent.razor
@@ -52,6 +52,6 @@ else
 
     private async Task HandleMoreDetailsClick(int personId)
     {
-        await OnMoreDetailsRequested.InvokeAsync(Person.Id);
+        if (Person != null) await OnMoreDetailsRequested.InvokeAsync(Person.Id);
     }
 }
