UI enhancements to modal

--- a/BlazorMovie/Components/UIComponents/SearchComponents/PersonSearchResultsComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponents/PersonSearchResultsComponent.razor
@@ -8,17 +8,17 @@
 
 @inject NavigationManager _navManager
 
-        <div class="@ModalCssClass"
-         style="@ModalStyle"
-        id="personSearchResultsModal" 
-        tabindex="-1"
-        aria-labelledby="personSearchResultsModalLabel" aria-hidden="@(!IsOpen).ToString()"
-        role="dialog">
-    <div class="modal-dialog modal-xl modal-dialog-centered modal-custom-size">
+<div class="@ModalCssClass"
+style="@ModalStyle"
+id="personSearchResultsModal" 
+tabindex="-1"
+aria-labelledby="personSearchResultsModalLabel" aria-hidden="@(!IsOpen).ToString()"
+role="dialog">
+    <div class="modal-dialog modal-xl modal-dialog-centered modal-custom-size modalDesign">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Search Results</h5>
-                <button type="button" class="btn-close" @onclick="CloseModal" aria-label="Close"></button>
+                <h5 class="modal-title">Search Results for "@GetName"</h5>
+                <button type="button" class="btn-close" title="close modal" @onclick="CloseModal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <div class="container">
@@ -28,9 +28,11 @@
                             @foreach (var person in SearchPersonResults.Results)
                             {
                                 <div class="col-lg-4 col-md-6 col-sm-12">
-                                    <PersonCardComponent Person="person" 
-                                                     SubText="@GetPopularityRating(person)" 
-                                                     OnMoreDetailsRequested="HandleChildMoreDetailsRequested"/>
+                                    @* <div class="card h-100 shadow p-3 mb-5 bg-body-tertiary rounded"> *@
+                                        <PersonCardComponent Person="person" 
+                                        SubText="@GetPopularityRating(person)" 
+                                        OnMoreDetailsRequested="HandleChildMoreDetailsRequested"/>
+                                    @* </div> *@
                                 </div>
                             }
                         }
@@ -41,13 +43,12 @@
                     </div>
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" @onclick="CloseModal">Close</button>
-            </div>
-        </div>
+            <div class="flex-grow-1"></div>
+           <button type="button" class="btn cardBtn mb-2 w-50 mx-auto" @onclick="CloseModal">Close</button>
+         </div>
     </div>
 </div>
-    
+
 @code {
     #region PARAMETERS
     [Parameter]
@@ -62,19 +63,19 @@
     [Parameter]
     public EventCallback<int> OnMoreDetailsRequested { get; set; }
 
-    [Parameter]
-    public string SubText { get; set; } = string.Empty;
     #endregion
 
     #region PROPERTIES/VARIABLES
     private string person { get; set; } = string.Empty;
     private string ModalCssClass => IsOpen ? "modal fade show" : "modal fade";
     private string ModalStyle => IsOpen ? "display: block; padding-right: 17px;" : "display: none";
-    
+    private string GetName => SearchPersonResults?.Results.FirstOrDefault()?.Name ?? "Unknown";
+
     //return the conversion of  float popularity  to string SubText
     private string GetPopularityRating(PersonSearchResult? person)
     => person?.Popularity.ToString("0.0") ?? "N/A";
 #endregion
+
     private async Task HandleChildMoreDetailsRequested(int personId) => await OnMoreDetailsRequested.InvokeAsync(personId);
    
     private IEnumerable<PersonSearchResult> PersonResults => SearchPersonResults?.Results 
