Created SearchPersonCardComponent to avoid conflicts with PersonCardComponent.

--- a/BlazorMovie/Components/UIComponents/SearchComponents/PersonSearchResultsComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponents/PersonSearchResultsComponent.razor
@@ -29,7 +29,7 @@ role="dialog">
                             {
                                 <div class="col-lg-4 col-md-6 col-sm-12">
                                     @* <div class="card h-100 shadow p-3 mb-5 bg-body-tertiary rounded"> *@
-                                        <PersonCardComponent Person="person" 
+                                        <SearchPersonCardComponent Person="person" 
                                         SubText="@GetPopularityRating(person)" 
                                         OnMoreDetailsRequested="HandleChildMoreDetailsRequested"/>
                                     @* </div> *@
